data/derived/comb/progs/unify/prog5087.ml.out
Characters 69-80:
  | x -> [0]@ [listZeros n-1];;
               ^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
